# bifrost-workflow-2409

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
bifrost2409/: __init__.py  config.py  dataset.py  features.py  nextcloud.py  plots.py
bifrost2409/modeling/: predict.py  train.py
data/meta/: pooch-registry.txt
notebooks/: 01_incoherent_elastic.ipynb  02_incoherent_inelastic.ipynb  03_phonon.ipynb  04_phonon_analysis.ipynb
