[build-system]
requires = [
    "setuptools>=68",
    "setuptools_scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost2409"
description = "Using the BIFROST data transformation workflow in September 2024"
authors = [
  { name = "Gregory Tucker" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10"

dependencies = [
"loguru",
"scipp[all]",
"plopp",
"scippneutron",
"scippnexus",
"sciline",
"pythreejs",
"ipympl",
"mpltoolbox",
"ipywidgets",
]

dynamic = ["version"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["bifrost2409"]
force_sort_within_sections = true
