[build-system]
requires = [
    "setuptools>=68",
    "setuptools_scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost2409"
description = "Using the BIFROST data transformation workflow in September 2024"
authors = [
  { name = "Gregory Tucker" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10"

dependencies = [
"loguru==0.7.2",
"scipp[all]==24.9.1",
"plopp==24.9.1",
"scippneutron==24.8.0",
"scippnexus==24.9.0",
"sciline==24.6.3",
"pythreejs==2.4.2",
"ipympl==0.9.4",
"mpltoolbox==24.5.1",
"ipywidgets==8.1.5",
"essspectroscopy",
]

dynamic = ["version"]

[project.scripts]
b2409-fetch = "bifrost2409.dataset:app"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["bifrost2409"]
force_sort_within_sections = true


[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["bifrost2409*"]